[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cost-guard-sdk"
version = "1.0.0"
description = "Python SDK for AI Cost Guard — track, analyze, and optimize your AI/LLM API costs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "AI Cost Guard", email = "sdk@aicostguard.com"}
]
keywords = [
    "ai", "llm", "cost", "cost-tracking", "cost-monitoring", "cost-optimization",
    "openai", "gpt-4", "gpt-4o", "chatgpt",
    "anthropic", "claude",
    "gemini", "google-ai",
    "cohere", "mistral",
    "token", "token-counting", "token-tracking",
    "api-cost", "api-monitoring",
    "llm-monitoring", "llm-ops", "mlops", "ai-ops",
    "budget", "budget-alerts", "analytics",
    "observability", "ai-observability", "optimization",
    "usage-tracking", "billing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://aicostguard.com"
Documentation = "https://aicostguard.com/docs"
Repository = "https://github.com/crediblearena/ai-cost-guard"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_cost_guard*"]
